--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE-specific files
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.settings
+.classpath
+.project
+.metadata
+
+# Maven stuff
+**/target/
+
+# macOS
+.DS_Store
