Added commons-lang dep

--- a/taco-cloud/pom.xml
+++ b/taco-cloud/pom.xml
@@ -16,9 +16,16 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<commons.lang3.version>3.9</commons.lang3.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons.lang3.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
